ftransc 4.3.1 (20 Feb 2012):
	+ added lyrics support for mp3, m4a and wma formats

ftransc 4.3.0 (20 Feb 2012):
	+ added the -o/--outdir option
	+ fixed potential bug with --upgrade
	+ refined parsing of playlist files

ftransc 4.2.9 (13 Jan 2012):
	+ added ability to convert audio files specified in PLS playlist file and
	XSPF playlist file via the --pls option and the --xspf option, resp.

ftransc 4.2.8 (10 Jan 2012):
	+ added ability to convert audio files specified in the M3U playlist file
	via the --m3u option

ftransc 4.2.7 (06 Jan 2012):
	+ added album art support when converting FROM ogg/flac TO mp3/m4a

ftransc 4.2.6 (05 Jan 2012):
	+ code cleanup
	+ added album art support when converting from mp3 to m4a and vice versa

ftransc 4.2.5 (19 Dec 2011):
	+ code cleanup
	+ proper message when --upgrade option is used while offline

ftransc 4.2.4 (19 Dec 2011):
	+ dropping checking mutagen version against version 1.17 since easy=True
	option of File() has been dropped.
	+ fixed fatal errors when mutagen is not installed. instead, metadata
	support is dropped.

ftransc 4.2.3 (19 Dec 2011):
	+ code cleanup

ftransc 4.2.2 (19 Dec 2011):
	+ code cleanup

ftransc 4.2.1 (18 Dec 2011):
	+ removed the easy=True dependency on mutagen's File
	+ fixed missing 'normal' ogg vorbis preset on configuration file

ftransc 4.2.0 (03 Dec 2011):
	+ removed quality presets from code and placed them in a separate file
	/etc/ftransc/presets.
	+ added new option to specify a custom preset file: --presets

ftransc 4.1.9 (03 Dec 2011):
	+ reverted back metadata extraction method to earlier revision.

ftransc 4.1.8 (24 Nov 2011):
	+ Adding logging for executing as nautilus script

ftransc 4.1.7 (20 Nov 2011):
	+ Adding the options: -s/--silent, -l/--log, --debug, --notify
	+ Fixed metadata issue with the year tag when converting from FLAC format.

ftransc 4.1.6 (20 Nov 2011):
	+ Adding mpc format support on ftransc nautilus scripts.

ftransc 4.1.5 (20 Nov 2011):