@@ -1,3 +1,8 @@
+ftransc 4.3.2 (10 Mar 2012):
+	+ added album artist, disk number, and comment metadata tags to some
+	formats
+	+ added output folder feature to fransc GUI, ftransc_qt
+
 ftransc 4.3.1 (20 Feb 2012):
 	+ added lyrics support for mp3, m4a and wma formats
 
